# The Manifest Format: https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "mousemode"
version = "0.1.1"
authors = ["'suna' <'suna@xmpp.is'>"]
edition = "2018"
description = "mousemode is a daemon that let us to use mouse operations on Keyboard."
documentation = "https://ghsable.github.io/mousemode/"
readme = "README.md"
homepage = "https://docs.rs/crate/mousemode/latest"
repository = "https://github.com/ghsable/mousemode"
license = "MIT"
license-file = "LICENSE"
keywords = ["mouse", "keyboard-shortcuts"]
categories = ["accessibility"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
device_query = "0.2.8"
mouse-rs = "0.4"
