[package]
name = "mousemode"
version = "0.1.7"
authors = ["'suna' <'suna@xmpp.is'>"]
edition = "2018"
description = "mousemode is a daemon that let us to use mouse operations on the Keyboard."
documentation = "https://ghsable.github.io/mousemode/mousemode/"
readme = "README.md"
homepage = "https://docs.rs/crate/mousemode/latest"
repository = "https://github.com/ghsable/mousemode"
license = "GPL-2.0-or-later"
keywords = ["simulation", "mouse", "hotkey", "hid", "keyboard"]
categories = ["hardware-support"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
device_query = "0.2.8"
mouse-rs = "0.4"
